--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>Whack-a-Mole!</title>
-        <link rel="stylesheet" href="./assets/style.css"/>
+        <title>Whack a House Fly!</title>
+        <link rel="stylesheet" href="./assets/css/stylesheet.css"/>
     </head>
 
     <body>
 
-        <h1>Whack a Mole!</h1>
+        <h1>Whack a House Fly!</h1>
 
         <h2>Your score: </h2>
         <h2 id="score">0</h2>
@@ -28,5 +28,5 @@
             <div class="square" id="9"></div>
         </div>
     </body>
-    <script src="./assets/js/app.js" charset="utf-8"></script>
+    <script src="./assets/js/app.js"></script>
 </html>
